--- a/spotify/index.html
+++ b/spotify/index.html
@@ -123,9 +123,35 @@
         </main>
         
         <footer>
-            <div class="left"></div>
-            <div class="center"></div>
-            <div class="right"></div>
+            <div class="left">
+                <img class="song" src="img/sinister.jpeg" alt="">
+                <div class="text"> 
+                    <h4>Sinister</h4>
+                    <p><a href="#">Brano Nome</a></p>
+                </div>
+                <div class="icon">
+                    <a href="#"><i class="far fa-heart"></i></a>
+                    <a href="#"><i class="far fa-folder"></i></a>
+                </div>
+            </div>
+            <div class="center">
+                <div class="top">
+                    <i class="fas fa-random"></i>
+                    <i class="fas fa-step-backward"></i>
+                    <a href="#"><i class="far fa-play-circle"></i></a>
+                    <i class="fas fa-step-forward"></i>
+                    <i class="fas fa-redo"></i>
+                </div>
+                <div class="bottom">
+                    <span>0:25</span><input type="range" name="time" id="range"><span>4:23</span>
+                </div>
+            </div>
+            <div class="right">
+                <i class="fas fa-list"></i>
+                <i class="fas fa-desktop"></i>
+                <i class="fas fa-volume-up"></i>
+                <input type="range" name="range" id="volume">
+            </div>
         </footer>
     </div>
 
